--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-<head>
+
+<html><head>
 	<title>Minimal Resume Template</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +9,11 @@
 
 	<div class="container">
 		<div class="hero">
-			<h1 class="name"><strong>Abbie</strong> Bradley</h1>
+			<h1 class="name"><strong>Dev</strong> Golzen</h1>
 			<span class="job-title">Developer</span>
-			<span class="email">abbie.bradley@gmail.com</span>
+			<span class="email">Make Code Easy</span>
 
-			<h2 class="lead">Development and design of web applications 
-for startups and large companies</h2>
+			<h2 class="lead">Working on PHP, Advance Javascript and HTML to make it more easier</h2>
 		</div>
 	</div>
 
@@ -22,36 +21,30 @@ for startups and large companies</h2>
 	<div class="container">
 
 		<div class="sections">
-			<h2 class="section-title">Skills</h2>
+			<h2 class="section-title">Focus:</h2>
 
 			<div class="list-card">
-				<span class="exp">+ 5 years</span>
+				<span class="exp">PHP</span>
 				<div>
-					<h3>Object programming & frameworks</h3>
-					<span>PHP, Symfony, Laravel, Silex, …</span>
+					<h3>Complex PHP Library</h3>
+					<span>For making HTML complex and SQL easy</span>
 				</div>
 			</div>
 			
 			<div class="list-card">
-				<span class="exp">+ 3 years</span>
+				<span class="exp">JS</span>
 				<div>
-					<h3>Design integration</h3>
-					<span>Style and tools, JS Frameworks</span>
+					<h3>Smile.Js</h3>
+					<span>For Image Optimization</span>
 				</div>
 			</div>	
 					
-			<div class="list-card">
-				<span class="exp">+ 6 years</span>
-				<div>
-					<h3>Linux</h3>
-					<span>Scripting, Servers management and protocols, Automation</span>
-				</div>
-			</div>
+			
 
 
 		</div>
 		<div class="sections">
-				<h2 class="section-title">Interests</h2>
+				<h2 class="section-title">Coming Soon</h2>
 				
 				<div class="list-card">
 					<div>
@@ -72,63 +65,50 @@ for startups and large companies</h2>
 	<!-- Achievements -->
 
 	<div class="container cards">
+    <h2 class="lead">Our Libraries</h2>
+<br><br>
 		
 		<div class="card">
 			<div class="skill-level">
-				<span>+</span>
-				<h2>60</h2>
+				<span style="
+">+</span>
+				<h2 style="font-size: 70px;">php</h2>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Projects</h3>
-				<span>Adapting and creating solutions for customer's needs</span>
+				<h3>Complex PHP</h3>
+				<span>Code SQL, Complex PHP easily and make HTML complex to prevent understanding.</span>
 			</div>
 		</div>
 
 			
 		<div class="card">
 			<div class="skill-level">
-				<h2>50</h2>
-				<span>%</span>
+				<h2 style="
+    font-size: 60px;
+">Smile</h2>
+				<span>:)</span>
 			</div>
 
 			<div class="skill-meta">
-				<h3>Web</h3>
-				<span>Applications development integrating third-party services and mobile client(s)</span>
+				<h3>Smile.js</h3>
+				<span>Improve HTML 5 image loading, speed and more with Smile.js</span>
 			</div>
 		</div>
 
 			
-		<div class="card">
-			<div class="skill-level">
-				<h2>30</h2>
-				<span>%</span>
-			</div>
-
-			<div class="skill-meta">
-				<h3>Technical solutions</h3>
-				<span>Such as web services, scripts, configurations</span>
-			</div>
-		</div>
+		
 
 
-		<div class="card">
-			<div class="skill-level">
-				<h2>20</h2>
-				<span>%</span>
-			</div>
-
-			<div class="skill-meta">
-				<h3>Leading</h3>
-				<span>Web projects and ensure the quality of delivery</span>
-			</div>
-		</div>
+		
 
 	</div>
 
 	<!-- Timeeline -->
 
-	<div class="container">
+	<div class="container" style="
+    display: none;
+">
 		<ol class="timeline">
 		  <li>
 		    <p class="line">Experiences</p>
@@ -159,7 +139,7 @@ for startups and large companies</h2>
 		  		  <li>
 		    <span class="point"></span>
 		    <p class="description">
-		      Art & Design studies
+		      Art &amp; Design studies
 		    </p>
 		    <span class="date">2013 - 2008</span>
 		  </li>
@@ -176,5 +156,5 @@ for startups and large companies</h2>
 	</footer>
 
 
-</body>
-</html>
+
+</body></html>
